improving alpine example

--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -8,7 +8,11 @@ description: A starting place for building websites with eleventy, tailwind, and
   </svg>
   <h3 class="mt-2 text-sm font-medium text-orange-600">No projects</h3>
   <p class="mt-1 text-sm text-gray-500">Get started by creating a new project.</p>
-  <div x-data="{open: false}" class="mt-6">
+  <div 
+    x-data="{open: false}" 
+    x-on:keydown.escape.window="open = false"
+    x-on:keydown.enter.window="open = false"
+    class="mt-6">
     <button @click="open = true"type="button" class="inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
       <!-- Heroicon name: solid/plus -->
       <svg class="-ml-1 mr-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
