ghost setup dev server upgrade

--- a/src/site/_layouts/base.liquid
+++ b/src/site/_layouts/base.liquid
@@ -16,17 +16,9 @@
     {% block head %}{% endblock %}
   </head>
   <body>
-    <div class="bg-white">
-      <div class="max-w-7xl mx-auto pt-16 pb-10 px-4 sm:pt-24 sm:pb-10 sm:px-6 lg:px-8">
-        <div class="text-center">
-          <h2 class="text-base font-semibold text-indigo-600 tracking-wide uppercase">Eleventy&<br>Tailwind&<br>Turbo&<br>Alpine&<br>Netlify&<br>Content.</h2>
-          <p class="mt-1 text-4xl font-extrabold text-gray-900 sm:text-5xl sm:tracking-tight lg:text-6xl">A Modern Web Stack</p>
-          <p class="max-w-xl mt-5 mx-auto text-xl text-gray-500">For building modern marketing websites.</p>
-        </div>
-      </div>
-    </div>
+    <h1>THIS IS THE MOTHERFUCKING BASE LAYOUT</h1>
+    <p>yo</p>
     {{content}}
   </body>
 </html>
-
 <div class=""></div>
