--- a/src/site/articles/articles.liquid
+++ b/src/site/articles/articles.liquid
@@ -1,4 +1,4 @@
----
+<!-- ---
 pagination:
   data: posts.collections
   size: 1
@@ -8,4 +8,4 @@ permalink: "/articles/{{ post.slug }}/"
 ---
 <h1>{{ post.title }}</h1>
 <p>{{ post.slug }}</p>
-{{ post.html }}
+{{ post.html }} -->
