netlify ghost local setup

--- a/src/site/_layouts/base.liquid
+++ b/src/site/_layouts/base.liquid
@@ -16,7 +16,7 @@
     {% block head %}{% endblock %}
   </head>
   <body>
-    <h1>THIS IS THE MOTHERFUCKING BASE LAYOUT</h1>
+    <h1 class="text-lg text-red-300">THIS IS THE MOTHERFUCKING BASE LAYOUT</h1>
     {{content}}
   </body>
 </html>
