--- a/src/site/_includes/recent-articles.liquid
+++ b/src/site/_includes/recent-articles.liquid
@@ -12,7 +12,7 @@
       <!-- RECENT ARTICLE LOOP -->
       {% assign counter = 0 %}
       {% for post in collections.justPosts %}
-        <!-- GHETTO LIMIT @TODO: should make this limit part of the collection call in eleventy config-->
+        <!-- GHETTO LIMIT @TODO: should make this limit part of the collection call in eleventy config.-->
         {% unless post.data.tags contains 'hash-featured' %}
         {% assign counter = counter | plus: 1%}
         {% if counter == 7 %}
@@ -30,7 +30,8 @@
             </p>
             <a href="#" class="block mt-2">
               <p class="text-xl font-semibold text-gray-900">{{post.data.title}}</p>
-              <p class="mt-3 text-base text-gray-500">{{post.data.excerpt}}</p>
+              <hr class="daiBar border-y-4 w-12 border-daiDark">
+              <p class="mt-3 text-base text-gray-500">{{post.excerpt}}</p>
             </a>
           </div>
           <div class="author-block mt-6 flex items-center">
