--- a/src/site/assets/css/legacy.css
+++ b/src/site/assets/css/legacy.css
@@ -447,12 +447,12 @@ body {
   opacity: 100; }
 
 a {
-  color: #54aa4f;
+  color: #1e7ab3;
   text-decoration: none; }
 
 a:hover,
 a:focus {
-  color: #43873f;
+  color: #1e7ab3;
   text-decoration: none; }
 
 h1, h2, h3, h4, h5, h6 {
