--- a/src/site/_includes/head.liquid
+++ b/src/site/_includes/head.liquid
@@ -24,6 +24,7 @@
   <!-- Javascript -->
 <script type="text/javascript" src="{{ site.baseurl }}/assets/js/site.js"></script>
 <!-- Should I add some kind of time based paramater to the JS URL for cache busting? -->
+<script type="text/javascript" src="/assets/js/turbo.js"></script>
   <!-- proxima nova hosted at typekit -->
   {% include 'webfonts.liquid' %}
   <!-- RSS -->
