--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -2,6 +2,11 @@
 layout: base.liquid
 description: DAI blogs landing page
 title: DAI Blogs
+pagination: 
+  data: collections.hash-post
+  size: 30
+  alias: more-posts
+  reverse: true
 ---
 <div class="base-container">
   <!-- BLOGS HEADER -->
@@ -10,7 +15,7 @@ title: DAI Blogs
       <div class="max-w-7xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8 lg:flex lg:justify-between">
         <div class="max-w-xl pr-3">
           <h2 class="text-4xl font-extra-bold text-white sm:text-5xl sm:tracking-tight lg:text-6xl">Our Blogs</h2>
-          <p class="mt-5 text-xl text-white">By freely sharing what we learn, we have built a reputation as thought leaders who translate ideas into action. <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">Developing Alternatives</span> is a forum for our professional staff and guest authors to share their ideas in depth and address issues of enduring interest.</p>
+          <p class="mt-5 text-xl text-white">By freely sharing what we learn, we have built a reputation as thought leaders who translate ideas into action. <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">DIGITAL@DAI</span> is our blog on what we're learning in the rapidly emerging field of ICT4D.</p>
         </div>
         <div class="mt-16 w-full max-w-xs">
           <div class="mt-1.5 relative">
@@ -29,8 +34,9 @@ title: DAI Blogs
       <!-- BLOG BUTTONS -->
       <div class="container mx-auto text-center">
         <span class="relative z-0 inline-flex shadow-sm rounded-md">
-          <button type="button" class="relative inline-flex items-center px-4 py-2 rounded-l-md border border-gray-300 bg-daiGreen text-sm font-medium text-white hover:brightness-95 focus:z-10 focus:outline-none focus:ring-1 focus:ring-daiPurple focus:border-daiPurple">DEVELOPMENTS</button>
-          <button type="button" class="-ml-px relative inline-flex items-center px-4 py-2 rounded-r-md border border-gray-300 bg-daiDark text-sm font-medium text-white hover:brightness-95 focus:z-10 focus:outline-none focus:ring-1 focus:ring-daiPurple focus:border-daiPurple">DEVELOPING ALTERNATIVES</button>
+          <button type="button" class="relative inline-flex items-center px-4 py-2 rounded-l-md border border-gray-300 bg-daiDark text-sm font-medium text-white hover:brightness-95 focus:z-10 focus:outline-none focus:ring-1 focus:ring-daiPurple focus:border-daiPurple">DEVELOPMENTS</button>
+          <button type="button" class="-ml-px relative inline-flex items-center px-4 py-2 rounded-r-md border border-gray-300 bg-daiLinks text-sm font-medium text-white hover:brightness-95 focus:z-10 focus:outline-none focus:ring-1 focus:ring-daiPurple focus:border-daiPurple">DIGITAL@DAI</button>
+          
         </span>
       </div>
     </div>
@@ -38,3 +44,4 @@ title: DAI Blogs
   <!-- END BLOGS HEADER -->
     {% include 'featured-articles.liquid' %}
     {% include 'recent-articles.liquid' %}
+    {% include 'more-news.liquid' %}
