--- a/src/site/_includes/more-news.liquid
+++ b/src/site/_includes/more-news.liquid
@@ -17,7 +17,7 @@
           <div>
             <div>
               <a href="#" class="inline-block">
-                <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium {% if post.data.tags contains 'hash-developments' %}bg-daiGreen{% elsif post.data.tags contains 'hash-devalts' %}bg-daiDark{% else %}bg-daiGreen{% endif %} text-white">{% if post.data.tags contains 'hash-developments' %}Developments{% elsif post.data.tags contains 'hash-devalts' %}Developing Alternatives{% else %}Developments{% endif %}</span>
+                <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-bold {% if post.data.tags contains 'hash-developments' %}bg-daiBlue{% elsif post.data.tags contains 'hash-devalts' %}bg-daiDark{% else %}bg-daiBlue{% endif %} text-white">{% if post.data.tags contains 'hash-developments' %}Developments{% elsif post.data.tags contains 'hash-devalts' %}Developing Alternatives{% else %}Developments{% endif %}</span>
               </a>
             </div>
             <a data-turbo="false" href="{{ post.url }}" class="block mt-4">
@@ -27,7 +27,7 @@
             {% if morePostAuthors[1] %}
             <div class="mt-6 flex items-center">
               <div class="flex-shrink-0">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9 user-group" viewBox="0 0 20 20" fill="currentColor">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9 user-group rounded-full" viewBox="0 0 20 20" fill="currentColor">
                     <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
                   </svg>
               </div>
@@ -99,12 +99,7 @@
       </turbo-frame>
       </div>
     </div>
-
-
-
-
-
-
-
   </div>
+</div>
+</div>
 </div>
