--- a/src/site/_includes/recent-articles.liquid
+++ b/src/site/_includes/recent-articles.liquid
@@ -20,7 +20,7 @@
         {% assign recentPostAuthors = post.data.tags | pluck:"hash-by" | join:"," | remove:"hash-by-" | replace:"-", " " | split:","%}
         <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
         <div class="flex-shrink-0">
-          <img class="h-48 w-full object-cover" src="{{ post.data.image | default:default-feature }}" alt="">
+          <a href="{{post.url}}"><img class="h-48 w-full object-cover" src="{{ post.data.image | default:default-feature }}" alt=""></a>
         </div>
         <div class="flex-1 bg-white p-6 flex flex-col justify-between">
           <div class="flex-1">
@@ -37,7 +37,7 @@
             <!-- MULTIPLE AUTHOR BLOCK @TODO: again, we should probably abstract the author blocks into a single component that accepts any number of authors-->
             {% if recentPostAuthors[1] %}
             <div class="flex-shrink-0">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9 user-group" viewBox="0 0 20 20" fill="currentColor">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9 user-group rounded-full" viewBox="0 0 20 20" fill="currentColor">
                 <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
               </svg>
               </div>
