--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -16,6 +16,8 @@ pagination:
         <div class="max-w-xl pr-3">
           <h2 class="text-4xl font-extra-bold text-white sm:text-5xl sm:tracking-tight lg:text-6xl">Our Blogs</h2>
           <p class="mt-5 text-xl text-white">By freely sharing what we learn, we have built a reputation as thought leaders who translate ideas into action. <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">DIGITAL@DAI</span> is our blog on what we're learning in the rapidly emerging field of ICT4D.</p>
+          <button class="daiButtons">Developments</button>
+          <button class="daiButtons">Digital@DAI</button>
         </div>
         <div class="mt-16 w-full max-w-xs">
           <div class="mt-1.5 relative">
@@ -31,17 +33,12 @@ pagination:
           </div>
         </div>
       </div>
-      <!-- BLOG BUTTONS -->
-      <div class="container mx-auto text-center">
-        <span class="relative z-0 inline-flex shadow-sm rounded-md">
-          <button type="button" class="relative inline-flex items-center px-4 py-2 rounded-l-md border border-gray-300 bg-daiDark text-sm font-medium text-white hover:brightness-95 focus:z-10 focus:outline-none focus:ring-1 focus:ring-daiPurple focus:border-daiPurple">DEVELOPMENTS</button>
-          <button type="button" class="-ml-px relative inline-flex items-center px-4 py-2 rounded-r-md border border-gray-300 bg-daiLinks text-sm font-medium text-white hover:brightness-95 focus:z-10 focus:outline-none focus:ring-1 focus:ring-daiPurple focus:border-daiPurple">DIGITAL@DAI</button>
-          
-        </span>
-      </div>
     </div>
   </div>
   <!-- END BLOGS HEADER -->
     {% include 'featured-articles.liquid' %}
     {% include 'recent-articles.liquid' %}
     {% include 'more-news.liquid' %}
+</div>
+
+<!-- THIS FUCKING SHIT SHOULD BE HERE -->
