--- a/src/site/_includes/featured-articles.liquid
+++ b/src/site/_includes/featured-articles.liquid
@@ -32,7 +32,7 @@
               <div class="flex-shrink-0 group block">
                 <div class="flex items-center">
                   <div class="text-daiDark">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9" viewBox="0 0 20 20" fill="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9 rounded-full" viewBox="0 0 20 20" fill="currentColor">
                       <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
                     </svg>
                   </div>
@@ -74,7 +74,7 @@
                         {{ tag }}{% unless forloop.last %}, {% endunless %}
                       {% endfor %}
                     </span></p>
-                    <p class="text-xs font-medium text-gray-500 mb-0">{{postOne.data.date | relativeDate}}| {{ postOne.templateContent | timeToRead }} read</p>
+                    <p class="text-xs font-medium text-gray-500 mb-0">{{postOne.data.date | relativeDate}} | {{ postOne.templateContent | timeToRead }} read</p>
                   </div>
                 </div>
               </div>    
@@ -88,7 +88,7 @@
               <hr class="daiBar border-y-4 w-14 mb-4 border-daiDark">
               <p class="mb-8">{{ postOne.data.excerpt }}</p>
               
-              <button onclick="window.location.href='{{ postOne.url }}'" type="button" class="my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-daiDark hover:bg-daiDark hover:brightness-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 uppercase">Read More</button>
+              <button onclick="window.location.href='{{ postOne.url }}'" type="button" class="daiButtons my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Read More</button>
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
         <div class="flex-shrink-0 group block">
           <div class="flex items-center">
             <div class="text-daiDark">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9" viewBox="0 0 20 20" fill="currentColor">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9 rounded-full" viewBox="0 0 20 20" fill="currentColor">
                 <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
               </svg>
             </div>
@@ -171,7 +171,7 @@
           <div class="flex-grow">
             <p class="mb-8">{{ post.data.excerpt }}</p>
           </div>
-          <button onclick="window.location.href='{{ post.url }}'" type="button" class="my-8 max-w-[157px] inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-daiDark hover:bg-daiDark hover:brightness-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 uppercase">Read More</button>
+          <button onclick="window.location.href='{{ post.url }}'" type="button" class="daiButtons my-8 max-w-[157px] items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Read More</button>
         </div>
     </div>
     {% endfor %}
