--- a/src/site/_includes/updated-post.liquid
+++ b/src/site/_includes/updated-post.liquid
@@ -2,15 +2,15 @@
 {% assign postAuthors = tags | pluck:"hash-by" | join:"," | remove:"hash-by-" | replace:"-", " " | split:","%}
 {% assign postTags = tags | pluckNot:"hash" %}
 <!-- POST HEADER -->
-<div class="relative bg-white overflow-hidden">
+<div class="relative overflow-hidden bg-daiLightGray">
   <div class="max-w-7xl mx-auto">
-    <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
-      <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
+    <div class="relative z-10 pb-8 bg-daiLightGray sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+      <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2" fill="#e4e5e6" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
         <polygon points="50,0 100,0 50,100 0,100" />
       </svg>
       <main class="pt-10 mx-auto max-w-7xl px-4 sm:pt-12 sm:px-6 md:pt-16 lg:pt-20 lg:px-8 xl:pt-28">
         <div class="sm:text-left">
-          <h1 class="text-4xl tracking-tight font-bold text-gray-900 sm:text-5xl md:text-6xl">{{ title }}</h1>
+          <h1 class="text-4xl tracking-tight font-bold text-daiDark sm:text-5xl md:text-6xl">{{ title }}</h1>
           <hr class="daiBar border-y-4 lg:border-y-[6px] w-14 lg:w-[6rem] border-daiDark">
           <div class="mt-5 sm:mt-8 sm:flex  lg:justify-start">
               {% if postAuthors[1] %}
@@ -34,7 +34,7 @@
                 <div class="flex">
                   <div class="mr-4 flex-shrink-0 self-center">
                     {% if postAuthor-details[0].image %}
-                      <img class="inline-block h-14 w-14 rounded-md" src="{{postAuthor-details[0].image}}" alt="">
+                      <img class="inline-block h-24 w-24 rounded-md" src="{{postAuthor-details[0].image}}" alt="">
                     {% else %}
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-14 w-14 user" viewBox="0 0 20 20" fill="currentColor">
                         <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z" clip-rule="evenodd" />
@@ -45,7 +45,7 @@
                     <h4 class="text-lg font-bold capitalize mb-0"><a href="">{{postAuthors[0]}}</a></h4>
                     <p class="mt-1 mb-0 mt-0">{{postAuthor-details[0].title}}</p>
                     <p class="mt-1 mb-0 mt-0">{{date | relativeDate}} | {{ content | timeToRead }} read</p>
-                    <p class="font-medium text-gray-500 mb-0 mt-0">Tags: <span class="font-bold">
+                    <p class="font-medium text-daiDark mb-0 mt-0">Tags: <span class="font-bold">
                       {% for tag in postTags %}
                         {{ tag }}{% unless forloop.last %}, {% endunless %}
                       {% endfor %}
@@ -63,9 +63,9 @@
   </div>
 </div>
 <!-- POST BODY -->
-<div class="relative py-16 bg-white overflow-hidden new-posts">
+<div class="relative py-16 bg-white overflow-hidden new-posts post-body">
   <div class="relative px-4 sm:px-6 lg:px-8">
-    <div class="mt-6 prose prose-indigo prose-lg text-gray-500 mx-auto">
+    <div class="mt-6 prose prose-indigo prose-lg mx-auto">
       {{content | remove:"<code>" | remove:"</code>"}}
     </div>
   </div>
