--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -8,21 +8,21 @@ pagination:
   alias: more-posts
   reverse: true
 ---
-<div class="base-container">
+<div class="base-container mt-[92px]">
   <!-- BLOGS HEADER -->
-  <div class="">
-    <div class="bg-daiBlue pb-6">
+  <div class="blogs-header">
+    <div class="pb-6">
       <div class="max-w-7xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8 lg:flex lg:justify-between">
         <div class="max-w-xl pr-3">
-          <h2 class="text-4xl font-extra-bold text-white sm:text-5xl sm:tracking-tight lg:text-6xl">Our Blogs</h2>
-          <p class="mt-5 text-xl text-white">By freely sharing what we learn, we have built a reputation as thought leaders who translate ideas into action. <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">DIGITAL@DAI</span> is our blog on what we're learning in the rapidly emerging field of ICT4D.</p>
+          <h2 class="text-4xl font-extra-bold text-daiDark sm:text-5xl sm:tracking-tight lg:text-6xl">Our Blogs</h2>
+          <p class="mt-5 text-xl text-daiDark">By freely sharing what we learn, we have built a reputation as thought leaders who translate ideas into action. <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">DIGITAL@DAI</span> is our blog on what we're learning in the rapidly emerging field of ICT4D.</p>
           <button class="daiButtons">Developments</button>
           <button class="daiButtons">Digital@DAI</button>
         </div>
         <div class="mt-16 w-full max-w-xs">
           <div class="mt-1.5 relative">
             <div>
-              <label for="search" class="block text-sm font-medium text-white">Search Posts</label>
+              <label for="search" class="block text-sm font-medium text-daiDark">Search Posts</label>
               <div class="mt-1 relative flex items-center">
                 <input type="text" name="search" id="search" class="shadow-sm focus:ring-daiPurple focus:border-daiPurple block w-full pr-12 sm:text-sm border-gray-300 rounded-md">
                 <div class="absolute inset-y-0 right-0 flex py-1.5 pr-1.5">
