--- a/src/site/_includes/related-articles.liquid
+++ b/src/site/_includes/related-articles.liquid
@@ -31,10 +31,8 @@
             <!-- MULTIPLE AUTHOR BLOCK @TODO: again, we should probably abstract the author blocks into a single component that accepts any number of authors-->
             {% if relatedPostAuthors[1] %}
             <div class="flex-shrink-0">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9 user-group" viewBox="0 0 20 20" fill="currentColor">
-                <path d="M13 6a3 3 0 11-6 0 3 3 0 016 0zM18 8a2 2 0 11-4 0 2 2 0 014 0zM14 15a4 4 0 00-8 0v3h8v-3zM6 8a2 2 0 11-4 0 2 2 0 014 0zM16 18v-3a5.972 5.972 0 00-.75-2.906A3.005 3.005 0 0119 15v3h-3zM4.75 12.094A5.973 5.973 0 004 15v3H1v-3a3 3 0 013.75-2.906z" />
-              </svg>
-              </div>
+              <img src="/assets/images/authors.svg" class="w-9 h-9" alt=""> 
+            </div>
             <div class="ml-3">
               <p class="text-sm font-bold text-gray-900 mb-0">
                 {% for author in relatedPostAuthors %}
@@ -56,9 +54,7 @@
                 {% if relatedAuthor-details[0].image %}
                   <img class="h-9 w-9 rounded-full" src="{{ relatedAuthor-details[0].image }}" alt="{{ author-details.name }}">  
                 {% else %}
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9 user" viewBox="0 0 20 20" fill="currentColor">
-                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z" clip-rule="evenodd" />
-                  </svg>
+                <img src="/assets/images/author.svg" class="w-9 h-9" alt="">
                 {% endif %}
               </div>
             <div class="ml-3">
