--- a/src/site/_includes/featured-articles.liquid
+++ b/src/site/_includes/featured-articles.liquid
@@ -51,7 +51,7 @@
                 </div>
               </div>  
               {% else %}
-              <!-- SINGLE AUTHOR DETAILS Grab single author details from experts.yml (aggregated from dai.com)-->
+              <!-- SINGLE AUTHOR DETAILS Grab single author details from experts.yml (aggregated from dai.com) yeeeek-->
               {% for author in postOneAuthors %}
               {% assign author-details = experts | where:"name", author %}
               <div class="flex-shrink-0 group block">
@@ -84,7 +84,7 @@
               <hr class="daiBar border-y-4 w-14 mb-4 border-daiDark">
               <p class="mb-8">{{ postOne.data.excerpt }}</p>
               
-              <button onclick="window.location.href='{{ postOne.url }}'" type="button" class="daiButtons my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Read More</button>
+              <button onclick="window.location.href='{{ postOne.url }}'" type="button" class="daiButtons my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Read More of this shite</button>
             </div>
           </div>
         </div>
@@ -136,7 +136,6 @@
           </div>
         </div>  
         {% else %}
-        this here: {{ postAuthors }}
         <!-- SINGLE AUTHOR DETAILS Grab single author details from experts.yml (aggregated from dai.com) effff-->
         {% for author in postAuthors %}
         {% assign author-details = experts | where:"name", author %}
