--- a/src/site/_includes/featured-articles.liquid
+++ b/src/site/_includes/featured-articles.liquid
@@ -84,7 +84,7 @@
               <hr class="daiBar border-y-4 w-14 mb-4 border-daiDark">
               <p class="mb-8">{{ postOne.data.excerpt }}</p>
               
-              <button onclick="window.location.href='{{ postOne.url }}'" type="button" class="daiButtons my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Read More of this shite</button>
+              <button onclick="window.location.href='{{ postOne.url }}'" type="button" class="daiButtons my-8 inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Read More</button>
             </div>
           </div>
         </div>
