--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -16,8 +16,8 @@ pagination:
         <div class="max-w-xl pr-3">
           <h1 class="text-4xl font-extra-bold text-daiDark sm:text-5xl sm:tracking-tight lg:text-6xl">Our Blogs</h1>
           <p class="mt-5 text-xl text-daiDark">By freely sharing what we learn, we have built a reputation as thought leaders who translate ideas into action. <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">DIGITAL@DAI</span> is our blog on what we're learning in the rapidly emerging field of ICT4D.</p>
-          <button class="daiButtons">Developments</button>
-          <button class="daiButtons">Digital@DAI</button>
+          <button class="daiButtons mb-4">Developments</button>
+          <button class="daiButtons mb-4">Digital@DAI</button>
         </div>
         <div class="mt-16 w-full max-w-xs">
           <div class="mt-1.5 relative blog-search">
@@ -40,14 +40,14 @@ pagination:
 </div>
 
 <!-- THIS FUCKING SHIT SHOULD BE HERE -->
-
+{% raw %}
 <script>
   var client = algoliasearch("R7MRY12BR6", "3ed9dbeffe898c2c8ebe0ded9d9144bd");
   var index = client.initIndex('Publications');
   //initialize autocomplete on search input (ID selector must match)
   autocomplete('#aa-search-input',
     { hint: false, debug: true, autoselect: true, keyboardShortcuts: ['s', '/'] }, {
-      source: autocomplete.sources.hits(index, { hitsPerPage: 7 }),
+      source: autocomplete.sources.hits(index, { hitsPerPage: 10 }),
       //value to be displayed in input control after user's suggestion selection
       displayKey: 'my_attribute',
       //hash of templates used when rendering dataset
@@ -55,7 +55,7 @@ pagination:
         //'suggestion' templating function used to render a single suggestion
         suggestion: function (suggestion) {
           return '<span>' +
-            suggestion._highlightResult.title.value + '</span><span>';
+            suggestion._highlightResult.title.value + '</span>';
         }
       }
     }).on('autocomplete:selected', function (event, suggestion, dataset) {
@@ -68,3 +68,4 @@ pagination:
     });
 
 </script>
+{% endraw %}
