--- a/src/site/_includes/more-news.liquid
+++ b/src/site/_includes/more-news.liquid
@@ -71,9 +71,9 @@
           {% else %}
           <div class="mt-6 flex items-center">
             <div class="flex-shrink-0">
-              <img src="/assets/images/author.svg" class="w-9 h-9" alt="">
+              
             </div>
-            <div class="ml-3">
+            <div class="">
               <div class="flex space-x-1 text-sm text-gray-500">
                 <time datetime="{{post.data.date}}"> {{post.data.date | relativeDate}} </time>
                 <span aria-hidden="true"> &middot; </span>
